:bug: patch overflow-x

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -18,6 +18,7 @@ body {
     flex-direction: column;
     align-items: center;
     width: 100vw;
+    max-width: 100%;
     background-color: var(--color-primary);
     // cursor: none;
 }
